# punched

./: README.md
backends/: .gitignore  settings.gradle.kts
backends/punched_user_authorization_server/: build.gradle.kts  settings.gradle.kts
backends/punched_user_authorization_server/src/main/kotlin/org/punched/user_system/: UserSystemAuthorizationApplication.kt
backends/punched_user_authorization_server/src/main/resources/: application.properties
backends/punched_user_authorization_server/src/test/kotlin/org/punched/user_system/: UserSystemApplicationTests.kt  UserSystemAuthorizationApplicationTests.kt
backends/punched_user_authorization_server/tests/: interface.http
backends/punched_user_client/: build.gradle.kts  settings.gradle.kts
backends/punched_user_client/src/main/kotlin/org/punched/client/: PunchedUserClientApplication.kt
backends/punched_user_client/src/main/kotlin/org/punched/client/controller/: TestController.kt
backends/punched_user_client/src/main/resources/: application.properties
backends/punched_user_resource_server/: HELP.md  build.gradle.kts  settings.gradle.kts
backends/punched_user_resource_server/src/main/resources/: application.properties
movement_generator/: .gitignore  pyproject.toml
movement_generator/inference/: pyproject.toml
movement_generator/inference/src/pmg_inference/common/: __init__.py  base_model.py
movement_generator/inference/src/pmg_inference/models/yolo/: __init__.py  interface.py  readme.md
movement_generator/inference/tests/: test_yolo.py
web_sites/admin_site/: package-lock.json  package.json
(+10 files in other folders)
